--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -1,6 +1,8 @@
 <resources>
     <string name="app_name">Kotlin_GB</string>
-    <string name="ok">Ok</string>
-    <!-- TODO: Remove or change this placeholder text -->
+    <string name="ok">OK</string>
     <string name="main_fragment">Main fragment</string>
+    <string name="temperature_label">Температура</string>
+    <string name="feels_like_label">Ощущается как</string>
+    <string name="city_coordinates">lt/ln: %s, %s"</string>
 </resources>
