lesson 5. Move all string values in Const.kt

--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -8,4 +8,9 @@
     <string name="fab">fab</string>
     <!-- TODO: Remove or change this placeholder text -->
     <string name="hello_blank_fragment">Hello blank fragment</string>
+
+    <string name="snack_bar_error_title">Error</string>
+    <string name="snack_bar_reload_title">Reload</string>
+
+
 </resources>
