--- a/app/src/main/res/values/strings.xml
+++ b/app/src/main/res/values/strings.xml
@@ -13,6 +13,9 @@
     <string name="snack_bar_reload_title">Reload</string>
     <string name="default_city_name">Volgograd</string>
     <string name="default_country_of_city_name">Russia</string>
+    <string name="latitude">latitude</string>
+    <string name="longitude">longitude</string>
+    <string name="find">Find</string>
 
 
 </resources>
